# proxydroid

./: .gitignore  .travis.yml  AndroidManifest.xml  README  README.md  ant.properties  build.gradle  build.xml  default.properties  gradle.properties  pom.xml  privacy_policy.md  project.properties  settings.gradle
.github/workflows/: android-build.yml
app/: build.gradle  google-services.json
app/src/main/: AndroidManifest.xml
app/src/main/assets/: proxy.sh  stunnel
app/src/main/cpp/: CMakeLists.txt  termExec.cpp
app/src/main/cpp/libevent/: CMakeLists.txt  evutil_rand.c
app/src/main/cpp/redsocks/: CMakeLists.txt  http-connect.c
app/src/main/cpp/tun2socks/: CMakeLists.txt  tun2socks_jni.cpp
app/src/main/cpp/tun2socks/core/: tun2socks.c  tun2socks.h
app/src/main/jni/: Android.mk  Application.mk  termExec.cpp
assets/: cntlm  proxy.sh  shadowsocks  shrpx  stunnel
assets/api-16/: iptables  proxy.sh  shadowsocks  stunnel
gradle/wrapper/: gradle-wrapper.properties
jni/: Android.mk  Application.mk  termExec.cpp
jni/openssl/crypto/: Android.mk
jni/shrpx/: shrpx_spdy_downstream_connection.cc  shrpx_spdy_session.cc
libs/actionbarsherlock-library-4.0.0-SNAPSHOT/: .project  build.xml
res/drawable/: button_white.xml
res/layout/: alert_dialog_text_entry.xml  bypass_list.xml  bypass_list_item.xml  file_view.xml  layout_apps_item.xml  main.xml
res/values/: colors.xml  strings.xml
res/values-ru/: strings.xml
res/xml/: proxydroid_preference.xml
res/xml-v14/: proxydroid_preference.xml
scripts/: run_emulator_tests.sh  run_integration_tests.sh  test_http_proxy.py
src/main/: AndroidManifest.xml
src/main/assets/: proxy.sh  shadowsocks  stunnel  tproxy
src/main/assets/api-16/: proxy.sh  shadowsocks
src/main/jni/: Application.mk  termExec.cpp
src/main/jni/shrpx/: shrpx_http_downstream_connection.cc  shrpx_spdy_upstream.cc
src/main/res/color/: selector.xml
src/main/res/drawable/: button_gray.xml  button_selector.xml
src/main/res/layout/: bypass_list.xml  layout_apps.xml
src/main/res/values/: strings.xml
src/main/res/values-fr/: strings.xml
src/main/res/values-pt/: strings.xml
src/main/res/values-ru/: strings.xml
src/main/res/xml/: proxydroid_appwidget_provider.xml  proxydroid_preference.xml
src/main/res/xml-v14/: proxydroid_preference.xml
src/org/proxydroid/: AppManager.java  Base64.java  BypassListActivity.java  ConnectivityBroadcastReceiver.java  DNSProxy.java  DomainValidator.java  Exec.java  FileArrayAdapter.java  FileChooser.java  ImageLoader.java  ImageLoaderFactory.java  InnerSocketBuilder.java  Profile.java  ProxyDroid.java  ProxyDroidReceiver.java  ProxyDroidService.java  ProxyDroidWidgetProvider.java  ProxyedApp.java  RegexValidator.java  Utils.java
utils/: latest_chn_ip.sh
(+150 files in other folders)
